[package]
name = "synchronized-writer"
version = "1.1.7"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/synchronized-writer"
homepage = "https://magiclen.org/synchronized-writer"
keywords = ["arc", "synchronized", "sync", "write", "mutex"]
categories = ["asynchronous", "data-structures"]
description= "A tiny implement for synchronously writing data."
readme = "README.md"
license = "MIT"

[badges.travis-ci]
repository = "magiclen/synchronized-writer"
branch = "master"

[dependencies]
