[package]
name = "synchronized-writer"
version = "1.1.10"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
repository = "https://github.com/magiclen/synchronized-writer"
homepage = "https://magiclen.org/synchronized-writer"
keywords = ["arc", "synchronized", "sync", "write", "mutex"]
categories = ["asynchronous", "data-structures"]
description = "A tiny implement for synchronously writing data."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
